# houseSpider

./: .gitIgnore  echartsShow.html  getHouseInfo.js  main.py  pyproject.toml  show.py  showLine.html  showTwo.py  test.js
jsScript/: getLianJiaHouseInfo.js  lianJiaHouseInfo.js  test.js
src/: httpServe.py  spider.py
