[project]
name = "housespider"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "selenium>=4.31.0",
    "setuptools>=78.1.0",
    "undetected-chromedriver>=3.5.5",
]
